--- a/ssl/tsrc/BC/libcrypto/crypto_test/group/crypto_test.cfg
+++ b/ssl/tsrc/BC/libcrypto/crypto_test/group/crypto_test.cfg
@@ -89,6 +89,18 @@ foobar SHA1Test
 delete foobar
 [Endtest]
 [Test]
+title SHA256_Test(3_50_2_6669)
+create crypto_test foobar
+foobar SHA256Test
+delete foobar
+[Endtest]
+[Test]
+title SHA512_Test(3_50_2_6670)
+create crypto_test foobar
+foobar SHA512Test
+delete foobar
+[Endtest]
+[Test]
 title BN_Test(3_50_2_6653)
 create crypto_test foobar
 foobar BNTest
